# russianaicup2015

./: CMakeLists.txt  README.md  sources.list
runner/: local-runner.properties  result.txt
